tests/NormalTests/paczka1/small_fuzzy/64691674.err
Error in line 2: 8WgJh A32 71,6
Error in line 6: PnC A873 48,1
Error in line 5: S9PHVLMxOIT A32 19,3
Error in line 11: PnC S403 37,1
